Add Northwind Context in StartUp Injection and ConnectionString in appSetting

--- a/Northwind.WebAPI/appsettings.json
+++ b/Northwind.WebAPI/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;AttachDbFilename=D:\\Code\\CSharp\\NorthwindCore\\NorthwindDatabase\\AppData\\Northwind.MDF;MultipleActiveResultSets=true;Trusted_Connection=True;"
+  }
 }
